style: fixed header on mobile

--- a/src/Header.css
+++ b/src/Header.css
@@ -6,6 +6,15 @@
   color: var(--link-color);
 }
 
+  @media (max-width: 1200px) {
+    .header {
+      position: fixed;
+      width: 100%;
+      top: 0;
+      z-index: 1;
+    }
+  }
+
 .header > div {
   display: flex;
 }
@@ -25,7 +34,7 @@
   @media (max-width: 1200px) {
     .nav ul {
       flex-direction: column;
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
       padding: 1em;
